<resources>
    <string name="app_name">LITEC</string>
    <string name="login_title">Вход в МойСклад</string>
    <string name="login_hint">Логин МойСклад</string>
    <string name="password_hint">Пароль МойСклад</string>
    <string name="login_button">Войти</string>
    <string name="login_required">Введите логин и пароль.</string>
    <string name="login_error_template">Ошибка входа: %1$s</string>
    <string name="auth_failed">Неверный логин или пароль.</string>
    <string name="session_expired">Сессия недействительна. Войдите снова.</string>
    <string name="menu_title">Меню</string>
    <string name="session_user_template">Пользователь: %1$s</string>
    <string name="orders_button">Заказы клиентов</string>
    <string name="orders_loading">Загрузка заказов...</string>
    <string name="orders_empty">Заказы не найдены.</string>
    <string name="orders_loaded_count">Заказов загружено: %1$d</string>
    <string name="orders_load_error_template">Ошибка загрузки заказов: %1$s</string>
    <string name="order_number_missing">Без номера</string>
    <string name="order_agent_missing">Контрагент не указан</string>
    <string name="update_button">Проверить обновление</string>
    <string name="update_checking">Проверяем...</string>
    <string name="update_no_updates">Обновлений нет</string>
    <string name="update_downloading">Скачиваем обновление...</string>
    <string name="update_permission_needed">Нужно разрешение на установку</string>
    <string name="update_install_started">Установка запущена</string>
    <string name="update_found_template">Найдена версия %1$d. Скачиваем...</string>
    <string name="update_error_template">Ошибка обновления: %1$s</string>
    <string name="update_download_status_error">Не удалось прочитать статус загрузки</string>
    <string name="update_download_failed">Загрузка обновления не завершилась</string>
    <string name="update_permission_toast">Разреши установку из этого приложения и нажми обновление снова</string>
    <string name="update_apk_not_found">APK файл обновления не найден</string>
    <string name="update_installer_missing">Не найден установщик пакетов</string>
    <string name="logout_button">Выход</string>
    <string name="logout_done">Вы вышли из аккаунта</string>
    <string name="error_unknown">неизвестная ошибка</string>
</resources>
